--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "hexo-generator-feed": "^1.0.3",
     "hexo-generator-index": "^0.1.2",
     "hexo-generator-tag": "^0.1.1",
+    "hexo-math": "^2.0.1",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
-    "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-stylus": "^0.3.0",
     "hexo-server": "^0.1.2"
   },
